Cambios en el index, agrega contenidos para nuevo home

--- a/index.html
+++ b/index.html
@@ -203,7 +203,13 @@
 						<div class="col-md-6 col-md-offset-6 col-sm-8 col-sm-offset-4 content clearfix">
 							<h1>Nuestra Empresa</h1>
 							<p class="lead">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+								En 1993 se fund&oacute; TWS S.A. con el objetivo de entregar servicios de informaci&oacute;n comercial a nivel global.   Cumpliendo este prop&oacute;sito se form&oacute; una red internacional de informaci&oacute;n crediticia que al d&iacute;a de hoy es capaz de cubrir las necesidades de nuestros clientes en Chile y el exterior.
+							</p>
+							<p class="lead">
+								Nuestros asociados a trav&eacute;s del mundo pueden beneficiarse de un servicio internacional, serio y comprometido.
+							</p>
+							<p class="lead">
+								Conjuntamente  TWS S.A. cre&oacute; la divisi&oacute;n de Cobranzas comerciales de Deuda Vencida,  y se adicion&oacute; el sistema  que denominamos Cobranza Administrativa o Servicio de deuda directa.
 							</p>
 							<a href="" class="btn btn-primary">Contactanos</a><br>
 						</div>
